# langchain-chat

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
config/: .env.example  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  logging.yaml
docs/: architecture-freeze-v0.1.0-step13.md  architecture.md  development.md  roadmap.md
src/langchain_chat/: __init__.py  logging_config.py  main.py
src/langchain_chat/core/: chat_engine.py  config_manager.py  config_models.py  json_formatter.py  model_manager.py  prompt_manager.py  provider.py  session_manager.py  user_manager.py
src/langchain_chat/models/: __init__.py  message.py  preset.py  session.py  user.py
src/langchain_chat/storage/: __init__.py  base.py  database.py  factory.py  file_backend.py  mysql_backend.py  sqlite_backend.py
src/langchain_chat/ui/: __init__.py  app.py  chat_view.py  commands.py
tests/: __init__.py  conftest.py  fakes.py  test_chat_engine.py  test_config.py  test_config_manager.py  test_file_backend.py  test_integration.py  test_main.py  test_model_manager.py  test_mysql_backend.py  test_prompt_manager.py  test_security.py  test_session_manager.py  test_storage.py  test_tui.py  test_user_manager.py
